--- a/src/com/edu/main/viwe/user/UpdateUser.form
+++ b/src/com/edu/main/viwe/user/UpdateUser.form
@@ -112,7 +112,7 @@
                                   <Group type="102" attributes="0">
                                       <Component id="useridTextfield" min="-2" pref="122" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jButton4" min="-2" max="-2" attributes="0"/>
+                                      <Component id="userSearchButton" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="usertypeTextfield" max="32767" attributes="0"/>
                                   <Component id="userpwdField" alignment="0" max="32767" attributes="0"/>
@@ -138,7 +138,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="useridTextfield" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="userSearchButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -235,12 +235,12 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cussaveButtonActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton4">
+            <Component class="javax.swing.JButton" name="userSearchButton">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Search"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userSearchButtonActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="userpwdField">
