commit before finalize 002

--- a/src/com/edu/main/view/customer/AddNewCustomer.form
+++ b/src/com/edu/main/view/customer/AddNewCustomer.form
@@ -121,14 +121,14 @@
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
+                                  <Group type="102" attributes="0">
                                       <Component id="cussaveButton" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="resetButton" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="cancleButton" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="errorText" min="-2" pref="119" max="-2" attributes="0"/>
+                                  <Component id="errorText" alignment="1" min="-2" pref="164" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
